--- a/site/transformers/index.html
+++ b/site/transformers/index.html
@@ -524,6 +524,7 @@
 
 
 <h1 id="transformers">Transformers</h1>
+<p>The transformers module contains classes that are used for spatial feature engineering.</p>
 <h2 id="spatial-lag-transformer">Spatial Lag Transformer</h2>
 <p>A transformer to create spatial lag variables by using a
 weighted mean/mode of the values of the K-neighboring observations. The
